fix-z-index

--- a/src/css/burger_menu.css
+++ b/src/css/burger_menu.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: 100%;
 
+    z-index: 1000;
+
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -25,10 +27,11 @@
     padding-top: 52px;
     padding-bottom: 52px;
 
-    z-index: 500;
     width: 100%;
     height: 100%;
     background-color: #576f35;
+
+    /* z-index: 1000; */
 
     display: flex;
     flex-direction: column;
